--- a/.github/workflows/build-test-push.yml
+++ b/.github/workflows/build-test-push.yml
@@ -12,6 +12,8 @@ jobs:
       - uses: actions/checkout@v3
 
       #Build Image
+      - name: Run Database container
+        run: docker run -v postgres_data:/var/lib/postgresql/data -p 5432:5432 -e POSTGRES_USER=klim -e POSTGRES_PASSWORD=password123 -e POSTGRES_DB=users_db --name db -d postgres:14.0
       - name: Build Docker Image
         run: docker build . --file Dockerfile -t parenek67/auth-service:latest
 
